<package>
  <name>rosjava_build_tools</name>
  <version>0.3.2</version>
  <description>
    Simple tools and catkin modules for rosjava development.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rosjava_build_tools</url>
  <url type="repository">https://github.com/ros-java/rosjava_build_tools</url>
  <url type="bugtracker">https://github.com/ros-java/rosjava_build_tools/issues</url>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>java</build_depend>
  <build_depend>ant</build_depend>
  <run_depend>java</run_depend>
  <run_depend>ant</run_depend>
  <run_depend>catkin</run_depend>
</package>
